; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_tt3_checkpoint.c_checkpoint_starvation_2.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_tt3_checkpoint.c_checkpoint_starvation_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i64, i32, i32 }

@SQLITE_CHECKPOINT_RESTART = common dso_local global i32 0, align 4
@CHECKPOINT_STARVATION_FRAMELIMIT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"WAL grew too large - %d frames\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @checkpoint_starvation_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @checkpoint_starvation_2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__, align 4
  %4 = alloca %struct.TYPE_7__, align 8
  store i32 %0, i32* %2, align 4
  %5 = bitcast %struct.TYPE_6__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 4, i1 false)
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %7 = load i32, i32* @SQLITE_CHECKPOINT_RESTART, align 4
  %8 = sext i32 %7 to i64
  store i64 %8, i64* %6, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  store i32 0, i32* %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 2
  store i32 0, i32* %10, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @checkpoint_starvation_main(i32 %11, %struct.TYPE_7__* %4)
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @CHECKPOINT_STARVATION_FRAMELIMIT, align 8
  %16 = add nsw i64 %15, 10
  %17 = icmp sgt i64 %14, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %1
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @test_error(%struct.TYPE_6__* %3, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i64 %20)
  br label %22

22:                                               ; preds = %18, %1
  %23 = call i32 @print_and_free_err(%struct.TYPE_6__* %3)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @checkpoint_starvation_main(i32, %struct.TYPE_7__*) #2

declare dso_local i32 @test_error(%struct.TYPE_6__*, i8*, i64) #2

declare dso_local i32 @print_and_free_err(%struct.TYPE_6__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
